@@ -265,3 +265,4 @@ class Smarty_Internal_Configfilelexer
     }
 
 }
+?>
